# zao_bot

./: LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/routes/: telegram_route.py  vk_route.py
app/services/: ai_service.py
